[gd_scene load_steps=24 format=3 uid="uid://cjyo8w1fk21e7"]

[ext_resource type="Script" path="res://Scripts/Gameplay/Nuke.gd" id="1_qbu4d"]
[ext_resource type="Texture2D" uid="uid://yh2l0hhq77oo" path="res://Sprites/Nuke.png" id="2_gk2hl"]
[ext_resource type="Texture2D" uid="uid://c8kdpfdv58p3" path="res://Sprites/Gifs/Explosion.png" id="3_sosmj"]
[ext_resource type="Texture2D" uid="uid://85jesodrvog1" path="res://Sprites/Yharon.png" id="4_d2flp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_68qvl"]
atlas = ExtResource("3_sosmj")
region = Rect2(1600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ck0x"]
atlas = ExtResource("3_sosmj")
region = Rect2(1800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvmvb"]
atlas = ExtResource("3_sosmj")
region = Rect2(2000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1je4"]
atlas = ExtResource("3_sosmj")
region = Rect2(2200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ulln"]
atlas = ExtResource("3_sosmj")
region = Rect2(2400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsbe8"]
atlas = ExtResource("3_sosmj")
region = Rect2(2600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2rlg"]
atlas = ExtResource("3_sosmj")
region = Rect2(2800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjds5"]
atlas = ExtResource("3_sosmj")
region = Rect2(3000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqb1q"]
atlas = ExtResource("3_sosmj")
region = Rect2(3200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kqww"]
atlas = ExtResource("3_sosmj")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_fabum"]
atlas = ExtResource("3_sosmj")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtlga"]
atlas = ExtResource("3_sosmj")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik8ih"]
atlas = ExtResource("3_sosmj")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2kef"]
atlas = ExtResource("3_sosmj")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3wno"]
atlas = ExtResource("3_sosmj")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_roytd"]
atlas = ExtResource("3_sosmj")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6me57"]
atlas = ExtResource("3_sosmj")
region = Rect2(1400, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_w2rcf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68qvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ck0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvmvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1je4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ulln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsbe8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2rlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjds5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqb1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kqww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fabum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtlga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik8ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2kef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3wno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roytd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6me57")
}],
"loop": true,
"name": &"Explosion",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_m0t8s"]
radius = 81.0987

[node name="Nuke Scene" type="Node2D"]

[node name="Nuke" type="Area2D" parent="."]
position = Vector2(464, -561)
collision_layer = 2
script = ExtResource("1_qbu4d")

[node name="Nuke" type="Sprite2D" parent="Nuke"]
position = Vector2(-3, 7)
scale = Vector2(0.56, 0.56)
texture = ExtResource("2_gk2hl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Nuke"]
visible = false
position = Vector2(-3.50001, -1.19209e-06)
scale = Vector2(0.815, 0.81)
sprite_frames = SubResource("SpriteFrames_w2rcf")
animation = &"Explosion"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Nuke/AnimatedSprite2D"]

[node name="Bomb" type="CollisionPolygon2D" parent="Nuke"]
position = Vector2(-55, -138)
polygon = PackedVector2Array(17, 137, 4, 139, -6, 145, -11, 150, -15, 156, -18, 167, -16, 183, -9, 194, 1, 201, 15, 204, 28, 202, 40, 193, 47, 182, 49, 168, 121, 128, 75, 136, 78, 118, 59, 123, 61, 86)

[node name="Explodimer" type="Timer" parent="Nuke"]
one_shot = true

[node name="BlastRadius" type="Area2D" parent="Nuke"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nuke/BlastRadius"]
position = Vector2(-4, 0)
shape = SubResource("CircleShape2D_m0t8s")

[node name="ExplosivePoint" type="Node2D" parent="Nuke/BlastRadius"]
position = Vector2(-2, 1)

[node name="Sprite2D" type="Sprite2D" parent="Nuke"]
visible = false
position = Vector2(-2, 1)
scale = Vector2(0.734234, 0.734234)
texture = ExtResource("4_d2flp")

[node name="Nuke2" type="Area2D" parent="."]
position = Vector2(464, -561)
collision_layer = 2
script = ExtResource("1_qbu4d")

[node name="Nuke" type="Sprite2D" parent="Nuke2"]
position = Vector2(-3, 7)
scale = Vector2(0.56, 0.56)
texture = ExtResource("2_gk2hl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Nuke2"]
visible = false
position = Vector2(-3.50001, -1.19209e-06)
scale = Vector2(0.815, 0.81)
sprite_frames = SubResource("SpriteFrames_w2rcf")
animation = &"Explosion"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Nuke2/AnimatedSprite2D"]

[node name="Bomb" type="CollisionPolygon2D" parent="Nuke2"]
position = Vector2(-55, -138)
polygon = PackedVector2Array(17, 137, 4, 139, -6, 145, -11, 150, -15, 156, -18, 167, -16, 183, -9, 194, 1, 201, 15, 204, 28, 202, 40, 193, 47, 182, 49, 168, 121, 128, 75, 136, 78, 118, 59, 123, 61, 86)

[node name="Explodimer" type="Timer" parent="Nuke2"]
one_shot = true

[node name="BlastRadius" type="Area2D" parent="Nuke2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nuke2/BlastRadius"]
position = Vector2(-4, 0)
shape = SubResource("CircleShape2D_m0t8s")

[node name="ExplosivePoint" type="Node2D" parent="Nuke2/BlastRadius"]
position = Vector2(-2, 1)

[node name="Sprite2D" type="Sprite2D" parent="Nuke2"]
visible = false
position = Vector2(-2, 1)
scale = Vector2(0.734234, 0.734234)
texture = ExtResource("4_d2flp")

[node name="Nuke3" type="Area2D" parent="."]
position = Vector2(464, -561)
collision_layer = 2
script = ExtResource("1_qbu4d")

[node name="Nuke" type="Sprite2D" parent="Nuke3"]
position = Vector2(-3, 7)
scale = Vector2(0.56, 0.56)
texture = ExtResource("2_gk2hl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Nuke3"]
visible = false
position = Vector2(-3.50001, -1.19209e-06)
scale = Vector2(0.815, 0.81)
sprite_frames = SubResource("SpriteFrames_w2rcf")
animation = &"Explosion"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Nuke3/AnimatedSprite2D"]

[node name="Bomb" type="CollisionPolygon2D" parent="Nuke3"]
position = Vector2(-55, -138)
polygon = PackedVector2Array(17, 137, 4, 139, -6, 145, -11, 150, -15, 156, -18, 167, -16, 183, -9, 194, 1, 201, 15, 204, 28, 202, 40, 193, 47, 182, 49, 168, 121, 128, 75, 136, 78, 118, 59, 123, 61, 86)

[node name="Explodimer" type="Timer" parent="Nuke3"]
one_shot = true

[node name="BlastRadius" type="Area2D" parent="Nuke3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nuke3/BlastRadius"]
position = Vector2(-4, 0)
shape = SubResource("CircleShape2D_m0t8s")

[node name="ExplosivePoint" type="Node2D" parent="Nuke3/BlastRadius"]
position = Vector2(-2, 1)

[node name="Sprite2D" type="Sprite2D" parent="Nuke3"]
visible = false
position = Vector2(-2, 1)
scale = Vector2(0.734234, 0.734234)
texture = ExtResource("4_d2flp")

[node name="Nuke4" type="Area2D" parent="."]
position = Vector2(464, -561)
collision_layer = 2
script = ExtResource("1_qbu4d")

[node name="Nuke" type="Sprite2D" parent="Nuke4"]
position = Vector2(-3, 7)
scale = Vector2(0.56, 0.56)
texture = ExtResource("2_gk2hl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Nuke4"]
visible = false
position = Vector2(-3.50001, -1.19209e-06)
scale = Vector2(0.815, 0.81)
sprite_frames = SubResource("SpriteFrames_w2rcf")
animation = &"Explosion"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Nuke4/AnimatedSprite2D"]

[node name="Bomb" type="CollisionPolygon2D" parent="Nuke4"]
position = Vector2(-55, -138)
polygon = PackedVector2Array(17, 137, 4, 139, -6, 145, -11, 150, -15, 156, -18, 167, -16, 183, -9, 194, 1, 201, 15, 204, 28, 202, 40, 193, 47, 182, 49, 168, 121, 128, 75, 136, 78, 118, 59, 123, 61, 86)

[node name="Explodimer" type="Timer" parent="Nuke4"]
one_shot = true

[node name="BlastRadius" type="Area2D" parent="Nuke4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nuke4/BlastRadius"]
position = Vector2(-4, 0)
shape = SubResource("CircleShape2D_m0t8s")

[node name="ExplosivePoint" type="Node2D" parent="Nuke4/BlastRadius"]
position = Vector2(-2, 1)

[node name="Sprite2D" type="Sprite2D" parent="Nuke4"]
visible = false
position = Vector2(-2, 1)
scale = Vector2(0.734234, 0.734234)
texture = ExtResource("4_d2flp")

[node name="Camera" type="Camera2D" parent="."]
visible = false
position = Vector2(0, -324)

[connection signal="area_entered" from="Nuke" to="Nuke" method="_on_area_entered"]
[connection signal="body_entered" from="Nuke" to="Nuke" method="_on_body_entered"]
[connection signal="timeout" from="Nuke/Explodimer" to="Nuke" method="_on_explodimer_timeout"]
[connection signal="body_entered" from="Nuke/BlastRadius" to="Nuke" method="_on_blast_radius_body_entered"]
[connection signal="area_entered" from="Nuke2" to="Nuke2" method="_on_area_entered"]
[connection signal="body_entered" from="Nuke2" to="Nuke2" method="_on_body_entered"]
[connection signal="timeout" from="Nuke2/Explodimer" to="Nuke2" method="_on_explodimer_timeout"]
[connection signal="body_entered" from="Nuke2/BlastRadius" to="Nuke2" method="_on_blast_radius_body_entered"]
[connection signal="area_entered" from="Nuke3" to="Nuke3" method="_on_area_entered"]
[connection signal="body_entered" from="Nuke3" to="Nuke3" method="_on_body_entered"]
[connection signal="timeout" from="Nuke3/Explodimer" to="Nuke3" method="_on_explodimer_timeout"]
[connection signal="body_entered" from="Nuke3/BlastRadius" to="Nuke3" method="_on_blast_radius_body_entered"]
[connection signal="area_entered" from="Nuke4" to="Nuke4" method="_on_area_entered"]
[connection signal="body_entered" from="Nuke4" to="Nuke4" method="_on_body_entered"]
[connection signal="timeout" from="Nuke4/Explodimer" to="Nuke4" method="_on_explodimer_timeout"]
[connection signal="body_entered" from="Nuke4/BlastRadius" to="Nuke4" method="_on_blast_radius_body_entered"]
